# Range-min-query-DS

./: CMakeLists.txt  README.md
CartesianTree/: CMakeLists.txt  README.md
CartesianTree/include/: CartesianTree.h
CartesianTree/src/: CartesianTree.cpp  test.cpp
CartesianTree/test/: CMakeLists.txt  test.cpp
MinArrays/: CMakeLists.txt  README.md
MinArrays/include/: MinArrays.h
MinArrays/src/: MinArrays.cpp
MinArrays/test/: CMakeLists.txt  test.cpp
include/: MinArrays.h  RangeMin.h
src/: MinArrays.cpp  RangeMin.cpp  main.cpp  test.cpp
